# sandkasten

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_UPGRADE.md  Dockerfile  Dockerfile.daemon  FEATURES_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  Makefile  PLAN.md  README.md  REFACTORING.md  SESSION_SUMMARY.md  STREAMING_FIX.md  Taskfile.yml  docker-compose.standalone.yml  docker-compose.yml  go.mod  go.sum  quickstart.sh  sandkasten-dev.yaml  sandkasten-full.yaml  sandkasten.db  sandkasten.yaml
.chglog/: config.yml
.claude/: settings.local.json
.cursor/plans/: dashboard_sveltekit_overhaul_124c2b7c.plan.md
.github/workflows/: ci.yaml  main.yaml
cmd/imgbuilder/: main.go
cmd/runner/: exec.go  fs.go  helpers.go  main.go  server.go
cmd/sandbench/: main.go
cmd/sandkasten/: commands_linux.go  main.go  nsinit_linux.go
cmd/sandkasten-wsl/: main.go
data/: sandkasten.db
docs/: api.md  configuration.md  index.md  openai-agents.md  quickstart.md  security.md  windows.md
docs/architecture/: runtime-architecture-guide.md
docs/features/: pool.md  streaming.md  workspaces.md
images/base/: Dockerfile  runner
images/node/: Dockerfile
images/python/: Dockerfile
internal/api/: dashboard.go  errors.go  errors_test.go  exec_handlers.go  exec_handlers_test.go  fs_handlers.go  fs_handlers_test.go  handlers.go  interfaces.go  middleware.go  middleware_test.go  mocks_test.go  request_body.go  router.go  session_handlers.go  session_handlers_test.go  validation.go  validation_test.go  workspace_fs_handlers.go  workspace_handlers.go  workspace_handlers_test.go
internal/autopull/: extract.go  puller.go
internal/config/: config.go  (+1 more)
protocol/: protocol.go  protocol_test.go
quickstart/: .gitignore  README.md  run.sh
quickstart/agent/: README.md  coding_agent.py  enhanced_agent.py  interactive_agent.py  pyproject.toml
scripts/: install.sh  run_fresh_benchmark.sh
sdk/: package.json  tsconfig.json
sdk/python/: DEV.md  README.md  pyproject.toml
sdk/python/examples/: README.md
sdk/python/examples/openai_agents/: openai_agents_example.py  workspace_example.py
sdk/python/sandkasten/: __init__.py  agents.py  client.py  exceptions.py  session.py  types.py
sdk/python/tests/: __init__.py  conftest.py  test_client.py  test_session.py  test_types.py
web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
(+79 files in other folders)
