[project]
name = "sandkasten-agent"
version = "0.1.0"
description = "Sandkasten coding agent quickstart"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "litellm[google]>=1.81.9",
    "openai-agents[litellm]>=0.8.1",
    "rich>=14.3.2",
    "sandkasten",
]

[tool.uv.sources]
sandkasten = { path = "../../sdk/python" }
