[project]
name = "sandkasten"
version = "0.2.0"
description = "Python SDK for Sandkasten — self-hosted sandbox runtime for AI agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "parndt"},
]
keywords = [
    "sandbox",
    "ai-agents",
    "sandkasten",
    "runtime",
    "http-client",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/p-arndt/sandkasten"
Documentation = "https://github.com/p-arndt/sandkasten/tree/main/sdk/python"
Repository = "https://github.com/p-arndt/sandkasten"
Changelog = "https://github.com/p-arndt/sandkasten/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
